--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@types/pdfkit": "^0.13.9",
     "next": "^14.1.0",
+    "pdfkit": "^0.16.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.1"
