--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "@types/pdfkit": "^0.13.9",
+    "framer-motion": "^12.4.3",
     "next": "^14.1.0",
     "pdfkit": "^0.16.0",
     "react": "^18.2.0",
